src/app/modules/shared/table/table.component.scss
.default-table-wrapper {
    .up, .down {
        display: flex;
        align-items: center;
        justify-content: flex-start;
    }

    .up {
        margin-right: 10px;
    }

    .up-label {
        height: 15px;
        width: 15px;
        background: green;
        border-radius: 5px;
        margin-right: 10px;
    }

    .down-label {
        height: 15px;
        width: 15px;
        background: red;
        border-radius: 5px;
        margin-right: 10px;
    }

    .five-label {
        height: 15px;
        width: 15px;
        background: green;
        border-radius: 5px;
        margin-right: 10px;
    }

    .three-label {
        height: 15px;
        width: 15px;
        background:yellow;
        border-radius: 5px;
        margin-right: 10px;
    }
    .two-label {
        height: 15px;
        width: 15px;
        background: orange;
        border-radius: 5px;
        margin-right: 10px;
    }
    .one-label {
        height: 15px;
        width: 15px;
        background: red;
        border-radius: 5px;
        margin-right: 10px;
    }
}

.table{
    &-header{
        background-color: #ededed;
    }
}

table{
    table-layout: fixed;
    width: 100%;  
    // border: 1px solid lightgrey; 
}

tr{
    border-top: 1px solid lightgrey;
    justify-content: space-around;
    display: flex;
    width: 100% !important;
}

thead tr{
    border: none;
    background-color: #f0f4ff;
    outline: none;
}

tbody{
    max-height: 350px;
    display: block;
    overflow-y: auto;
} 

th{
    border: none !important;
    width: 130px;
    font-weight: 600;
    font-size: 1rem;
    font-family: 'BT Curve Bold';
    color: #5d5d5d;
}

td{
    border: none;
    text-align: left;
}


tbody td{
    width: 130px;
}

